# TelloVision

./: README.md
tellovision/src/dynamic/: package.xml  setup.cfg  setup.py
tellovision/src/dynamic/dynamic/: dynamic_node.py
tellovision/src/dynamic/models/: normalization_params.npz
tellovision/src/face_tracker/: package.xml  setup.cfg  setup.py
tellovision/src/face_tracker/face_tracker/: PlotModule.py  face_tracker.py
tellovision/src/media_pipe_ros2/: package.xml  setup.cfg  setup.py
tellovision/src/media_pipe_ros2/media_pipe_ros2/: FaceMesh(NAOEXCLUIR).py  face_mesh_detector.py  hands_detector.py  holistic_detector.py  pose_detector.py  teste.py
tellovision/src/media_pipe_ros2_msg/: CMakeLists.txt  package.xml
tellovision/src/media_pipe_ros2_msg/msg/: FaceMeshPoint.msg  HandPoint.msg  MediaPipeHumanFaceMeshList.msg  MediaPipeHumanHand.msg  MediaPipeHumanHandList.msg  MediaPipeHumanHolisticList.msg  MediaPipeHumanPoseList.msg  PosePoint.msg
tellovision/src/orchestrator_launch/: package.xml  setup.cfg  setup.py
tellovision/src/tello/: LICENSE.txt  package.xml  setup.cfg  setup.py
tellovision/src/tello_control/: CMakeLists.txt  package.xml
tellovision/src/tello_detect/: package.xml  setup.cfg  setup.py
tellovision/src/tello_detect/launch/: launch.py
tellovision/src/tello_detect/tello_detect/: face_rotate.py  handface_filter.py  movement_gestures.py  sim.py  simple_predict.py  state_control.py
tellovision/src/tello_detect/tello_detect/models/: gesture_model.pt  label_encoder.pkl
tellovision/src/tello_msg/: CMakeLists.txt  package.xml
(+8 files in other folders)
